# rust-cavalieri-integration

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/: errors.rs  lib.rs  main.rs
src/cav2d/: differentiable.rs  display.rs  integrate.rs  mod.rs
src/cav3d/: display.rs
src/core/: differentiable.rs  helpers.rs  integrate.rs  mod.rs  parsing.rs  triangulation.rs
src/cpython_funcs/: extension.rs
src/pyo3_wrappers/: mod.rs  standardized_gui_methods.rs  wrappers.rs
tests/: mod.rs  test_helpers.rs
tests/cav2d/: display.rs  integration_testing.rs  mod.rs  monotone_regions.rs  translational_regions.rs
tests/cav2d/display/: mod.rs  monotone_regions.rs  translational_regions.rs
tests/cav2d/integrate/: integrate_cav_r.rs  mod.rs
tests/cav3d/: integration_testing.rs  mod.rs
tests/core/: differentiable.rs  expressions.rs  integration.rs  mod.rs  parsing.rs  triangulation.rs
tests/core/expressions/: basic_expressions.rs  mod.rs
